--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,10 @@ script:
 after_success:
 - npm run report-coverage
 
-# To enable semantic-release, uncomment this section.
-# deploy:
-# - provider: script
-#   skip_cleanup: true
-#   script: npx semantic-release
-#   on:
-#     node: 12
-#     branch: master
+deploy:
+- provider: script
+  skip_cleanup: true
+  script: npx semantic-release
+  on:
+    node: 12
+    branch: master
