--- a/package.json
+++ b/package.json
@@ -36,22 +36,23 @@
   "dependencies": {
     "@types/node": "^12.0.8",
     "extend": "^3.0.2",
-    "ibm-cloud-sdk-core": "^2.17.14"
+    "ibm-cloud-sdk-core": "^3.1.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/git": "^7.0.12",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.26.0",
     "eslint-config-google": "^0.12.0",
-    "eslint-config-prettier": "^4.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-node": "^9.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "installed-check": "^2.2.0",
     "jest": "^27.4.3",
-    "prettier": "^1.17.1",
-    "semantic-release": "^17.4.3",
+    "nock": "^13.2.4",
+    "prettier": "^2.3.0",
+    "semantic-release": "^19.0.3",
     "tsc-publish": "^0.5.2",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.18.0",
