--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
   "scripts": {
     "eslint:fix": "eslint . --fix",
     "eslint:check": "eslint . --cache",
-    "tslint:fix": "tslint --fix -p . -c tslint.json",
-    "tslint:check": "tslint -p . -c ./tslint.json",
-    "lint": "npm run eslint:check && npm run tslint:check",
-    "lint-fix": "npm run eslint:fix && npm run tslint:fix",
+    "lint": "npm run eslint:check",
+    "lint-fix": "npm run eslint:fix",
     "build": "tsc && cp package.json dist/",
     "prepublishOnly": "npm run build",
     "postversion": "tsc-publish --no-checks --dry-run",
@@ -34,14 +32,14 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "@types/node": "^12.0.8",
+    "@types/node": "^14.0.0",
     "extend": "^3.0.2",
-    "ibm-cloud-sdk-core": "^3.2.1"
+    "ibm-cloud-sdk-core": "4.0.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.4",
     "@semantic-release/git": "^7.0.12",
-    "axios": "^0.21.1",
+    "axios": "1.2.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.26.0",
     "eslint-config-google": "^0.12.0",
@@ -49,7 +47,7 @@
     "eslint-plugin-node": "^9.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "installed-check": "^2.2.0",
-    "jest": "^27.4.3",
+    "jest": "^29.3.1",
     "nock": "^13.2.4",
     "prettier": "^2.3.0",
     "semantic-release": "^19.0.3",
