feat(2023-02-16): Update SDK to use API generated on 2023-03-29 Signed-off-by: Sunitha Gudisagar <Sunitha.Gudisagar@ibm.com>
New Features:
1. next_hop, priority support in RoutePatch
2. Dns support in loadbalancer
3. idle_connection_timeout in load balancer listener
4. priority added to CreateVpcRouteParams, create_vpc_routing_table_route VpcV1
5. vcpu_manufacturer support added
 InstanceProfileVCPUManufacturer added to InstanceProfile
6. DedicatedHostProfileVCPUManufacturer added to DedicatedHostProfile
7. Added InstanceProfileNetworkInterfaceCountDependent which extends InstanceProfileNetworkInterfaceCount
8. Added RouteNextHopPatchRouteNextHopIP which extends RouteNextHopPatch
Breaking Changes:
		OperatingSystemReference -> OperatingSystem
		LifecycleReason -> InstanceLifecycleReason
		InstanceAvailabilityPrototype -> InstanceAvailabilityPolicyPrototype
		VolumeReference -> VolumeReferenceVolumeAttachmentContext

Signed-off-by: SunithaGudisagar <Sunitha.Gudisagar@ibm.com>

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "npm run build && npm run lint && jest test/",
     "test-unit": "npm run build && jest test/unit/",
     "test-integration": "npm run build && jest test/integration",
+    "test-example": "npm run build && jest examples/ ",
     "test-travis": "jest --runInBand --testNamePattern='^((?!@slow).)*$' test/",
     "test-unit-travis": "jest --runInBand test/unit/",
     "test-integration-travis": "jest --runInBand --no-colors --testNamePattern='^((?!@slow).)*$' --json test/integration > test-output.log",
@@ -34,11 +35,11 @@
   "dependencies": {
     "@types/node": "^14.0.0",
     "extend": "^3.0.2",
-    "ibm-cloud-sdk-core": "4.0.3"
+    "ibm-cloud-sdk-core": "4.0.5"
   },
   "devDependencies": {
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/git": "^7.0.12",
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/git": "10.0.1",
     "axios": "1.2.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.26.0",
