--- a/package.json
+++ b/package.json
@@ -53,11 +53,7 @@
     "prettier": "^2.3.0",
     "semantic-release": "^19.0.3",
     "tsc-publish": "^0.5.2",
-    "tslint": "^5.16.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "typedoc": "^0.22.10",
-    "typescript": "^4.7.4"
+    "typescript": "~4.9.4"
   },
   "jest": {
     "collectCoverage": true,
