--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint:fix": "eslint . --fix",
     "eslint:check": "eslint . --cache",
     "lint": "npm run eslint:check",
-    "lint-fix": "npm run eslint:fix && npm run tslint:fix",
+    "lint-fix": "npm run eslint:fix",
     "build": "tsc && cp package.json dist/",
     "prepublishOnly": "npm run build",
     "postversion": "tsc-publish --no-checks --dry-run",
@@ -48,13 +48,13 @@
     "eslint-plugin-node": "^9.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "installed-check": "^2.2.0",
-    "uuid": "^9.0.0",
     "jest": "^29.3.1",
     "nock": "^13.2.4",
     "prettier": "^2.3.0",
     "semantic-release": "^19.0.3",
     "tsc-publish": "^0.5.2",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "uuid": "^9.0.0"
   },
   "jest": {
     "collectCoverage": true,
