--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "@types/node": "^14.0.0",
     "extend": "^3.0.2",
-    "ibm-cloud-sdk-core": "^4.1.0"
+    "ibm-cloud-sdk-core": "^4.1.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "6.0.1",
@@ -53,8 +54,7 @@
     "prettier": "^2.3.0",
     "semantic-release": "^19.0.3",
     "tsc-publish": "^0.5.2",
-    "typescript": "~4.9.4",
-    "uuid": "^9.0.0"
+    "typescript": "~4.9.4"
   },
   "jest": {
     "collectCoverage": true,
