--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint:fix": "eslint . --fix",
     "eslint:check": "eslint . --cache",
     "lint": "npm run eslint:check",
-    "lint-fix": "npm run eslint:fix",
+    "lint-fix": "npm run eslint:fix && npm run tslint:fix",
     "build": "tsc && cp package.json dist/",
     "prepublishOnly": "npm run build",
     "postversion": "tsc-publish --no-checks --dry-run",
@@ -35,12 +35,12 @@
   "dependencies": {
     "@types/node": "^14.0.0",
     "extend": "^3.0.2",
-    "ibm-cloud-sdk-core": "^5.0.0",
+    "ibm-cloud-sdk-core": "^5.1.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@ibm-cloud/sdk-test-utilities": "^1.0.0",
-    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "axios": "1.2.1",
     "dotenv": "^8.2.0",
@@ -53,7 +53,7 @@
     "jest": "^29.3.1",
     "nock": "^13.2.4",
     "prettier": "^2.3.0",
-    "semantic-release": "^19.0.3",
+    "semantic-release": "^23.1.1",
     "tsc-publish": "^0.5.2",
     "typescript": "~4.9.4"
   },
