feat(workflow): fixed the ci.yml file
Signed-off-by: Ujjwal Kumar <Ujjwal.Kumar1@ibm.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,7 @@ jobs:
 
     - name: Release
       if: github.ref == 'refs/heads/master' && matrix.node-version == '22'
+      env:
+        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: npx semantic-release
