--- a/.releaserc
+++ b/.releaserc
@@ -9,5 +9,15 @@
     {
       "path": "@semantic-release/github"
     }
+  ],
+  "success": false,
+  "fail": false,
+  "plugins": [
+    ["@semantic-release/git", {
+      "assets": ["package.json", "CHANGELOG.md", "dist/**/*.{js,css}"],
+      "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}",
+      "gitUserName": "uibm",
+      "gitUserEmail": "ujjwal.kumar1@ibm.com"
+    }]
   ]
 }
