removed travis references
Signed-off-by: Ujjwal Kumar <Ujjwal.Kumar1@ibm.com>

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "test-unit": "npm run build && jest test/unit/",
     "test-integration": "npm run build && jest test/integration",
     "test-example": "npm run build && jest examples/ ",
-    "test-travis": "jest --runInBand --testNamePattern='^((?!@slow).)*$' test/",
-    "test-unit-travis": "jest --runInBand test/unit/",
-    "test-integration-travis": "jest --runInBand --no-colors --testNamePattern='^((?!@slow).)*$' --json test/integration > test-output.log",
+    "test-ci": "jest --runInBand --testNamePattern='^((?!@slow).)*$' test/",
+    "test-unit-ci": "jest --runInBand test/unit/",
+    "test-integration-ci": "jest --runInBand --no-colors --testNamePattern='^((?!@slow).)*$' --json test/integration > test-output.log",
     "check-packages": "installed-check -e -d -v"
   },
   "license": "Apache-2.0",
