fixed ci.yml to run unit tests only
Signed-off-by: Ujjwal Kumar <Ujjwal.Kumar1@ibm.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         npm run build
         npm run lint
         npm run check-packages
-        npm run test-ci
+        npm run test-unit-ci
 
     - name: Release
       if: github.ref == 'refs/heads/master' && matrix.node-version == '22'
