--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
     environment: ci
     strategy:
       matrix:
-        node-version: [18, 20, 22]
-        
+        node-version: ['20', '22', '24']
+
     steps:
     - uses: actions/checkout@v3
       with:
